[project]
name = "rlm"
authors = [
    {name = "Alex Zhang", email = "altzhang@mit.edu"},
]
version = "0.1.0"
description = "Recursive Language Models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "openai>=2.14.0",
    "portkey-ai>=2.1.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=13.0.0",
]

[project.optional-dependencies]
modal = ["modal>=0.73.0", "dill>=0.3.7"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rlm", "rlm.*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs-internal"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie
    "RUF",   # ruff-specific
    "PERF",  # perflint
    "T20",   # flake8-print
    "ASYNC", # flake8-async
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary operator (sometimes less readable)
    "SIM102",  # nested if (sometimes clearer)
    "SIM105",  # contextlib.suppress (try-except-pass is fine)
    "PERF203", # try-except in loop (sometimes unavoidable)
    "RUF005",  # iterable unpacking (list + [x] is fine)
    "RUF012",  # ClassVar for mutable class attrs (too strict)
    "RUF013",  # implicit Optional (ty handles this)
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T20"]
"tests/*" = ["T20"]
"rlm/utils/parsing.py" = ["T20"]  # existing debug print

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
